--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.10"
+    "mongodb": "^3.6.10",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
